--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
