--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "sans": "^1.0.0",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "expo-checkbox": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
