--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
+    "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
+    "expo-random": "~13.1.1",
     "expo-status-bar": "~1.4.4",
     "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
@@ -24,7 +27,7 @@
     "react-native-svg": "13.4.0",
     "sans": "^1.0.0",
     "styled-components": "^5.3.10",
-    "expo-checkbox": "~2.3.1"
+    "uuid-js": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +36,7 @@
     "@types/react-native": "^0.71.6",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
+    "@types/uuid-js": "^0.7.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.39.0",
